Fix Flickering

--- a/src/components/LineChart/styles.css
+++ b/src/components/LineChart/styles.css
@@ -9,4 +9,5 @@
 .LineChart_smallLegend {
   font-size: 10px;
   background: white;
+  pointer-events: none;
 }
